[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.0"
mime_guess = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio", "macros"] }
tokio = { version = "1.36.0", features = ["full"] }
dotenvy = "0.15.7"
bcrypt = "0.15.1"
uuid = { version = "1.7.0", features = ["v4"] }
httparse = "1.8.0"
